Modularize native-image